# Golden-Ratio-computer

./: CMakeLists.txt  README.md
apps/: wa_console.cpp  wa_gui_app.cpp
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
docs/: BLUEPRINT_SCHEMATIC.md
include/wolfman_alpha/: wa_alu.hpp  wa_audio.hpp  wa_bits.hpp  wa_calc.hpp  wa_components.hpp  wa_cpu.hpp  wa_gear.hpp  wa_gui.hpp  wa_io.hpp  wa_machine.hpp  wa_math.hpp  wa_ring.hpp  wa_types.hpp  wa_word.hpp  wa_zodiac.hpp
src/: wa_audio.cpp  wa_calc.cpp  wa_components.cpp  wa_cpu.cpp  wa_gui.cpp  wa_io.cpp
